--- a/dlt_workshop/Homework_data_talks_club_data_extraction_and_ingestion.ipynb
+++ b/dlt_workshop/Homework_data_talks_club_data_extraction_and_ingestion.ipynb
@@ -168,17 +168,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Pipeline dlt_ipykernel_launcher load step completed in 0.22 seconds\n",
+            "Pipeline dlt_ipykernel_launcher load step completed in 0.23 seconds\n",
             "1 load package(s) were loaded to destination duckdb and into dataset people\n",
             "The duckdb destination used duckdb:///c:\\Users\\kuroc\\Google Drive\\Projects\\data-engineering-zoomcamp2024-homework\\dlt_workshop\\dlt_ipykernel_launcher.duckdb location to store data\n",
-            "Load package 1707774426.4115057 is LOADED and contains no failed jobs\n"
+            "Load package 1707787698.6468792 is LOADED and contains no failed jobs\n"
           ]
         }
       ],
@@ -359,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 32,
       "metadata": {
         "id": "a2-PRBAkGC2K"
       },
@@ -368,10 +368,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Pipeline dlt_ipykernel_launcher load step completed in 0.38 seconds\n",
+            "Pipeline dlt_ipykernel_launcher load step completed in 0.42 seconds\n",
             "1 load package(s) were loaded to destination duckdb and into dataset people\n",
             "The duckdb destination used duckdb:///c:\\Users\\kuroc\\Google Drive\\Projects\\data-engineering-zoomcamp2024-homework\\dlt_workshop\\dlt_ipykernel_launcher.duckdb location to store data\n",
-            "Load package 1707774326.078502 is LOADED and contains no failed jobs\n"
+            "Load package 1707787705.7618241 is LOADED and contains no failed jobs\n"
           ]
         }
       ],
@@ -448,6 +448,147 @@
       "source": [
         "ages = conn.sql(\"SELECT sum(age) FROM people.people\").df()\n",
         "display(ages)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>name</th>\n",
+              "      <th>age</th>\n",
+              "      <th>city</th>\n",
+              "      <th>_dlt_load_id</th>\n",
+              "      <th>_dlt_id</th>\n",
+              "      <th>occupation</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Person_1</td>\n",
+              "      <td>26</td>\n",
+              "      <td>City_A</td>\n",
+              "      <td>1707787698.6468792</td>\n",
+              "      <td>w2Lf5Ncr02KJ/A</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Person_2</td>\n",
+              "      <td>27</td>\n",
+              "      <td>City_A</td>\n",
+              "      <td>1707787698.6468792</td>\n",
+              "      <td>OXIh0OBwIDsg+g</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>4</td>\n",
+              "      <td>Person_4</td>\n",
+              "      <td>34</td>\n",
+              "      <td>City_B</td>\n",
+              "      <td>1707787705.7618241</td>\n",
+              "      <td>aoenUYGpWLFrow</td>\n",
+              "      <td>Job_4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>5</td>\n",
+              "      <td>Person_5</td>\n",
+              "      <td>35</td>\n",
+              "      <td>City_B</td>\n",
+              "      <td>1707787705.7618241</td>\n",
+              "      <td>mXl25Vo+LSXmvA</td>\n",
+              "      <td>Job_5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Person_3</td>\n",
+              "      <td>33</td>\n",
+              "      <td>City_B</td>\n",
+              "      <td>1707787705.7618241</td>\n",
+              "      <td>+NxnLHwtuSh4NA</td>\n",
+              "      <td>Job_3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>6</td>\n",
+              "      <td>Person_6</td>\n",
+              "      <td>36</td>\n",
+              "      <td>City_B</td>\n",
+              "      <td>1707787705.7618241</td>\n",
+              "      <td>QqQb2eB/1xWb0A</td>\n",
+              "      <td>Job_6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>8</td>\n",
+              "      <td>Person_8</td>\n",
+              "      <td>38</td>\n",
+              "      <td>City_B</td>\n",
+              "      <td>1707787705.7618241</td>\n",
+              "      <td>Es77e4M6UX3G7Q</td>\n",
+              "      <td>Job_8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>7</td>\n",
+              "      <td>Person_7</td>\n",
+              "      <td>37</td>\n",
+              "      <td>City_B</td>\n",
+              "      <td>1707787705.7618241</td>\n",
+              "      <td>ZOgcZM2hob8uiw</td>\n",
+              "      <td>Job_7</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   id      name  age    city        _dlt_load_id         _dlt_id occupation\n",
+              "0   1  Person_1   26  City_A  1707787698.6468792  w2Lf5Ncr02KJ/A       None\n",
+              "1   2  Person_2   27  City_A  1707787698.6468792  OXIh0OBwIDsg+g       None\n",
+              "2   4  Person_4   34  City_B  1707787705.7618241  aoenUYGpWLFrow      Job_4\n",
+              "3   5  Person_5   35  City_B  1707787705.7618241  mXl25Vo+LSXmvA      Job_5\n",
+              "4   3  Person_3   33  City_B  1707787705.7618241  +NxnLHwtuSh4NA      Job_3\n",
+              "5   6  Person_6   36  City_B  1707787705.7618241  QqQb2eB/1xWb0A      Job_6\n",
+              "6   8  Person_8   38  City_B  1707787705.7618241  Es77e4M6UX3G7Q      Job_8\n",
+              "7   7  Person_7   37  City_B  1707787705.7618241  ZOgcZM2hob8uiw      Job_7"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "conn.sql(\"SELECT * FROM people.people\").df()\n"
       ]
     },
     {
