--- a/05-batch/code/06_spark_sql.ipynb
+++ b/05-batch/code/06_spark_sql.ipynb
@@ -10,15 +10,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/jars/spark-unsafe_2.12-3.0.3.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/02/17 22:43:50 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "your 131072x1 screen size is bogus. expect trouble\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/02/21 21:39:07 WARN Utils: Your hostname, AspireA51556 resolves to a loopback address: 127.0.1.1; using 172.31.241.142 instead (on interface eth0)\n",
+      "24/02/21 21:39:07 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/02/21 21:39:09 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/02/21 21:39:11 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -34,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1ee1eb1d",
    "metadata": {},
    "outputs": [
@@ -47,7 +63,7 @@
     }
    ],
    "source": [
-    "df_green = spark.read.parquet('data/pq/green/*/*')"
+    "df_green = spark.read.parquet('pq/green/*/*')"
    ]
   },
   {
@@ -60,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "649bb4da",
    "metadata": {},
    "outputs": [],
@@ -77,12 +93,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_yellow = spark.read.parquet('data/pq/yellow/*/*')"
+    "df_yellow = spark.read.parquet('pq/yellow/*/*')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "88822efd",
    "metadata": {},
    "outputs": [],
@@ -94,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "610167a2",
    "metadata": {},
    "outputs": [],
@@ -110,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "839d773f",
    "metadata": {},
    "outputs": [],
@@ -120,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "2498810a",
    "metadata": {},
    "outputs": [],
@@ -132,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "19032efc",
    "metadata": {},
    "outputs": [],
@@ -144,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "f5b0f3d1",
    "metadata": {},
    "outputs": [],
@@ -154,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "1bed8b33",
    "metadata": {},
    "outputs": [
@@ -162,7 +178,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 2:======================================================>  (25 + 1) / 26]\r"
      ]
     },
     {
@@ -172,10 +188,17 @@
       "+------------+--------+\n",
       "|service_type|   count|\n",
       "+------------+--------+\n",
-      "|       green| 2304517|\n",
-      "|      yellow|39649199|\n",
+      "|       green| 2802931|\n",
+      "|      yellow|55553400|\n",
       "+------------+--------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -185,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "28cc8fa3",
    "metadata": {},
    "outputs": [
@@ -213,7 +236,7 @@
        " 'service_type']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
