--- a/05-batch/code/06_spark_sql.ipynb
+++ b/05-batch/code/06_spark_sql.ipynb
@@ -247,17 +247,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "36e90cbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pavlo/spark/spark-3.3.2-bin-hadoop3/python/pyspark/sql/dataframe.py:229: FutureWarning: Deprecated in 2.0, use createOrReplaceTempView instead.\n",
+      "  warnings.warn(\"Deprecated in 2.0, use createOrReplaceTempView instead.\", FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "df_trips_data.registerTempTable('trips_data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "d0e01bf1",
    "metadata": {},
    "outputs": [
@@ -265,7 +274,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 5:======================================================>  (25 + 1) / 26]\r"
      ]
     },
     {
@@ -275,10 +284,17 @@
       "+------------+--------+\n",
       "|service_type|count(1)|\n",
       "+------------+--------+\n",
-      "|       green| 2304517|\n",
-      "|      yellow|39649199|\n",
+      "|       green| 2802931|\n",
+      "|      yellow|55553400|\n",
       "+------------+--------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -296,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "b2ee7038",
    "metadata": {},
    "outputs": [],
@@ -330,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "f67eeb92",
    "metadata": {},
    "outputs": [
