--- a/05-batch/code/08_rdds.ipynb
+++ b/05-batch/code/08_rdds.ipynb
@@ -10,15 +10,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/jars/spark-unsafe_2.12-3.0.3.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/02/21 22:25:30 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "your 131072x1 screen size is bogus. expect trouble\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/02/27 11:58:43 WARN Utils: Your hostname, AspireA51556 resolves to a loopback address: 127.0.1.1; using 172.31.241.142 instead (on interface eth0)\n",
+      "24/02/27 11:58:43 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/02/27 11:58:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -42,15 +57,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 0:>                                                          (0 + 1) / 1]\r",
-      "\r",
       "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "df_green = spark.read.parquet('data/pq/green/*/*')"
+    "df_green = spark.read.parquet('pq/green/*/*')"
    ]
   },
   {
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "74fe52cb",
    "metadata": {
     "scrolled": true
@@ -90,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "1a0bf382",
    "metadata": {},
    "outputs": [],
@@ -100,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "fa2b00f1",
    "metadata": {},
    "outputs": [],
@@ -113,28 +125,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "69dd326d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rows = rdd.take(10)\n",
+    "rows = rdd.filter(filter_outliers).take(10)\n",
     "row = rows[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "cd4b7006",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Row(lpep_pickup_datetime=datetime.datetime(2020, 1, 16, 19, 49, 27), PULocationID=260, total_amount=14.3)"
+       "Row(lpep_pickup_datetime=datetime.datetime(2020, 1, 31, 23, 44, 7), PULocationID=255, total_amount=18.3)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "d99eb089",
    "metadata": {},
    "outputs": [],
@@ -164,7 +176,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
+   "id": "1354a1a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((datetime.datetime(2020, 1, 31, 23, 0), 255), (18.3, 1)),\n",
+       " ((datetime.datetime(2020, 1, 5, 10, 0), 135), (25.88, 1)),\n",
+       " ((datetime.datetime(2020, 1, 3, 22, 0), 66), (19.86, 1)),\n",
+       " ((datetime.datetime(2020, 1, 11, 13, 0), 97), (20.16, 1)),\n",
+       " ((datetime.datetime(2020, 1, 6, 14, 0), 166), (54.2, 1)),\n",
+       " ((datetime.datetime(2020, 1, 29, 18, 0), 71), (26.88, 1)),\n",
+       " ((datetime.datetime(2020, 1, 8, 18, 0), 181), (10.8, 1)),\n",
+       " ((datetime.datetime(2020, 1, 16, 11, 0), 74), (10.3, 1)),\n",
+       " ((datetime.datetime(2020, 1, 21, 22, 0), 95), (7.3, 1)),\n",
+       " ((datetime.datetime(2020, 1, 6, 12, 0), 116), (9.8, 1))]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd.filter(filter_outliers).map(prepare_for_grouping).take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "cb328a44",
    "metadata": {},
    "outputs": [],
@@ -181,7 +223,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
+   "id": "8c818144",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[((datetime.datetime(2020, 1, 29, 18, 0), 71), (99.47999999999999, 5)),\n",
+       " ((datetime.datetime(2020, 1, 16, 11, 0), 74), (870.0799999999994, 68)),\n",
+       " ((datetime.datetime(2020, 1, 9, 18, 0), 61), (129.64, 9)),\n",
+       " ((datetime.datetime(2020, 1, 4, 14, 0), 74), (970.8699999999991, 72)),\n",
+       " ((datetime.datetime(2020, 1, 27, 14, 0), 177), (100.68, 3)),\n",
+       " ((datetime.datetime(2020, 1, 19, 14, 0), 75), (650.9599999999999, 41)),\n",
+       " ((datetime.datetime(2020, 1, 19, 17, 0), 210), (92.6, 2)),\n",
+       " ((datetime.datetime(2020, 1, 8, 6, 0), 14), (305.59999999999997, 8)),\n",
+       " ((datetime.datetime(2020, 1, 27, 19, 0), 92), (147.4, 7)),\n",
+       " ((datetime.datetime(2020, 1, 14, 18, 0), 222), (115.44, 4))]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd.filter(filter_outliers).map(prepare_for_grouping).reduceByKey(\n",
+    "    calculate_revenue\n",
+    ").take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "2ea260f1",
    "metadata": {},
    "outputs": [],
@@ -191,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "id": "7dae6064",
    "metadata": {},
    "outputs": [],
@@ -201,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "e0a98ee4",
    "metadata": {},
    "outputs": [],
@@ -217,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "a09200b8",
    "metadata": {},
    "outputs": [],
@@ -227,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "5c14d15e",
    "metadata": {},
    "outputs": [],
@@ -242,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "id": "56ea72ff",
    "metadata": {},
    "outputs": [],
@@ -257,10 +338,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "id": "4675bd3f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 11:>                                                         (0 + 8) / 8]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/02/27 12:50:22 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "Scaling row group sizes to 95.00% for 8 writers\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -404,7 +500,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       "[Stage 48:>                                                         (0 + 1) / 1]\r"
      ]
     },
@@ -444,7 +540,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       "                                                                                \r"
      ]
     }
@@ -478,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
