--- a/05-batch/code/08_rdds.ipynb
+++ b/05-batch/code/08_rdds.ipynb
@@ -299,22 +299,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "4675bd3f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AnalysisException",
-     "evalue": "path file:/home/pavlo/data-engineering-zoomcamp2024-homework/05-batch/code/tmp/green-revenue already exists.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[47], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf_result\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparquet\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtmp/green-revenue\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/spark/spark-3.3.2-bin-hadoop3/python/pyspark/sql/readwriter.py:1140\u001b[0m, in \u001b[0;36mDataFrameWriter.parquet\u001b[0;34m(self, path, mode, partitionBy, compression)\u001b[0m\n\u001b[1;32m   1138\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpartitionBy(partitionBy)\n\u001b[1;32m   1139\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_opts(compression\u001b[38;5;241m=\u001b[39mcompression)\n\u001b[0;32m-> 1140\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jwrite\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparquet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/py4j/java_gateway.py:1321\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1315\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1316\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1320\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1321\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1322\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1324\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[1;32m   1325\u001b[0m     temp_arg\u001b[38;5;241m.\u001b[39m_detach()\n",
-      "File \u001b[0;32m~/spark/spark-3.3.2-bin-hadoop3/python/pyspark/sql/utils.py:196\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    192\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[1;32m    193\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    194\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    195\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 196\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    198\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
-      "\u001b[0;31mAnalysisException\u001b[0m: path file:/home/pavlo/data-engineering-zoomcamp2024-homework/05-batch/code/tmp/green-revenue already exists."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 18:>                                                         (0 + 8) / 8]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/02/27 13:49:57 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "Scaling row group sizes to 95.00% for 8 writers\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -324,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "id": "255b5503",
    "metadata": {},
    "outputs": [],
@@ -338,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 50,
    "id": "645c3190",
    "metadata": {},
    "outputs": [],
@@ -348,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 51,
    "id": "921e4ef9",
    "metadata": {},
    "outputs": [],
@@ -358,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 52,
    "id": "f50db3eb",
    "metadata": {},
    "outputs": [],
@@ -368,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 53,
    "id": "5b8ecc53",
    "metadata": {},
    "outputs": [
@@ -382,7 +390,7 @@
        " 'trip_distance']"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 54,
    "id": "6766c0f8",
    "metadata": {},
    "outputs": [],
@@ -408,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 55,
    "id": "7437b848",
    "metadata": {},
    "outputs": [],
@@ -424,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 56,
    "id": "580b5845",
    "metadata": {},
    "outputs": [
@@ -445,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 57,
    "id": "6055d543",
    "metadata": {},
    "outputs": [
@@ -453,8 +461,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r\n",
-      "[Stage 48:>                                                         (0 + 1) / 1]\r"
+      "[Stage 21:>                                                         (0 + 1) / 1]\r"
      ]
     },
     {
@@ -464,26 +471,26 @@
       "+------------------+\n",
       "|predicted_duration|\n",
       "+------------------+\n",
-      "|             12.95|\n",
-      "|             31.25|\n",
-      "|              14.0|\n",
-      "|             12.75|\n",
-      "|               0.1|\n",
-      "|             11.05|\n",
-      "|11.299999999999999|\n",
-      "|54.349999999999994|\n",
-      "|             15.25|\n",
-      "|             91.75|\n",
-      "|             12.25|\n",
-      "|               3.1|\n",
-      "|               7.5|\n",
-      "|11.899999999999999|\n",
-      "| 78.89999999999999|\n",
-      "|              4.45|\n",
+      "|              16.0|\n",
+      "|              21.0|\n",
+      "|             15.85|\n",
+      "|             16.65|\n",
+      "|             85.55|\n",
       "|              23.2|\n",
-      "|              4.85|\n",
-      "|              6.65|\n",
-      "|              15.1|\n",
+      "|              7.05|\n",
+      "|               9.5|\n",
+      "|               4.5|\n",
+      "|10.149999999999999|\n",
+      "|              21.5|\n",
+      "| 7.800000000000001|\n",
+      "|            125.45|\n",
+      "|             12.85|\n",
+      "|              39.5|\n",
+      "|               2.7|\n",
+      "|              91.0|\n",
+      "|               1.3|\n",
+      "|             23.35|\n",
+      "|              41.5|\n",
       "+------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -493,7 +500,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r\n",
       "                                                                                \r"
      ]
     }
